force-app/main/default/objects/Payment__c/fields/Allocation_Date_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Date_Criteria__c</fullName>
    <formula>if(AND(Date__c &gt;= Investment_Area_Allocation__r.Funding_Allocation_Start_Date__c,
                    Date__c &lt;= Investment_Area_Allocation__r.Funding_Allocation_End_Date__c),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Date Criteria</label>
    <type>Checkbox</type>
</CustomField>