force-app/main/default/objects/Payment__c/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Centre</label>
    <referenceTo>Cost_Centre__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>