force-app/main/default/objects/Payment__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>This is the due date for the payment.</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>