force-app/main/default/objects/Payment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>This will display on the remittance advice that is sent with the payment to the Organisation.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>