force-app/main/default/objects/Payment__c/fields/Expense_Code__c.field-meta.xml
<CustomField>
    <fullName>Expense_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Code</label>
    <referenceTo>Expense_Code__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>