force-app/main/default/objects/Payment__c/fields/GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>GST_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Uncheck for zero-rated transactions, GST will not be added to the payment amount.</inlineHelpText>
    <label>GST Applicable</label>
    <type>Checkbox</type>
</CustomField>