force-app/main/default/objects/Payment__c/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overdue Requirement (Initiative)</fullName>
            </value>
            <value>
                <fullName>Overdue Requirement (Organisation)</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>