force-app/main/default/objects/Payment__c/fields/HPSNZ_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>HPSNZ_Activity_ID__c</fullName>
    <formula>Initiative__r.ActivityID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HPSNZ Activity ID</label>
    <type>Text</type>
</CustomField>