force-app/main/default/objects/Payment__c/fields/HPSNZ_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>HPSNZ_Project_ID__c</fullName>
    <formula>Initiative__r.ProjectID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HPSNZ Project ID</label>
    <type>Text</type>
</CustomField>