force-app/main/default/objects/Payment__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <label>Initiative</label>
    <referenceTo>Initiative__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>