force-app/main/default/objects/Payment__c/fields/Initiative_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Initiative_End_Date__c</fullName>
    <formula>Initiative__r.End_Date__c</formula>
    <label>Initiative End Date</label>
    <type>Date</type>
</CustomField>