force-app/main/default/objects/Payment__c/fields/Initiative_End_Date_Image__c.field-meta.xml
<CustomField>
    <fullName>Initiative_End_Date_Image__c</fullName>
    <formula>if( Date__c &gt;  Initiative_End_Date__c ,
image( $Setup.Icons__c.Orange__c,&quot;&quot;),
image( $Setup.Icons__c.Green__c,&quot;&quot;))</formula>
    <label>Initiative End Date</label>
    <type>Text</type>
</CustomField>