force-app/main/default/objects/Payment__c/fields/Initiative_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Start_Date__c</fullName>
    <formula>Initiative__r.Start_Date__c</formula>
    <label>Initiative Start Date</label>
    <type>Date</type>
</CustomField>