force-app/main/default/objects/Payment__c/fields/Initiative_Start_Date_Image__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Start_Date_Image__c</fullName>
    <formula>if( Date__c &lt; Initiative_Start_Date__c , 
image( $Setup.Icons__c.Orange__c,&quot;&quot;), 
image( $Setup.Icons__c.Green__c,&quot;&quot;))</formula>
    <label>Initiative Start Date</label>
    <type>Text</type>
</CustomField>