force-app/main/default/objects/Payment__c/fields/Investment_Area_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Area Allocation</label>
    <referenceTo>Investment_Area_Allocation__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>