force-app/main/default/objects/Payment__c/fields/Invoice_Number_Link__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_Link__c</fullName>
    <formula>HYPERLINK( Id, Invoice_Number__c, &apos;_self&apos;)</formula>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>