force-app/main/default/objects/Payment__c/fields/Manual_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Hold_Reason__c</fullName>
    <label>Manual Hold Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>