force-app/main/default/objects/Payment__c/fields/Organisation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Flag__c</fullName>
    <formula>if(TEXT(Initiative__r.Investment_Area__r.Strategic_Area__r.Entity__c) = &quot;High Performance&quot;, &quot;HPSNZ&quot;, &quot;Sport NZ&quot;)</formula>
    <label>Entity</label>
    <type>Text</type>
</CustomField>