force-app/main/default/objects/Payment__c/fields/Overdue_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overdue Requirements</label>
    <type>Checkbox</type>
</CustomField>