force-app/main/default/objects/Payment__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <formula>Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Name</label>
    <type>Text</type>
</CustomField>