force-app/main/default/objects/Payment__c/fields/Payment_System_Error__c.field-meta.xml
<CustomField>
    <fullName>Payment_System_Error__c</fullName>
    <label>Payment System Error Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>