force-app/main/default/objects/Payment__c/fields/Payment_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Payment_to_Vendor__c</fullName>
    <formula>IF(Vendor_Id__c=NULL,&quot;No&quot;,&quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment to Vendor?</label>
    <type>Text</type>
</CustomField>