force-app/main/default/objects/Payment__c/fields/Pending_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Pending_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Requirements</label>
    <type>Checkbox</type>
</CustomField>