force-app/main/default/objects/Payment__c/fields/Reporting_Year__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Year__c</fullName>
    <description>Default value will be Reporting Year = Financial Year. It can then be changed.</description>
    <label>Reporting Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>