force-app/main/default/objects/Payment__c/fields/RUL_Old_RecordType_Id__c.field-meta.xml
<CustomField>
    <fullName>RUL_Old_RecordType_Id__c</fullName>
    <label>Old RecordType Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>