force-app/main/default/objects/Payment__c/fields/Sage_Batch_Entry__c.field-meta.xml
<CustomField>
    <fullName>Sage_Batch_Entry__c</fullName>
    <label>Sage Batch Entry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>