force-app/main/default/objects/Payment__c/fields/Security_Remove_Hold__c.field-meta.xml
<CustomField>
    <fullName>Security_Remove_Hold__c</fullName>
    <formula>if(Case( $UserRole.Name,
&quot;CEO&quot;,1,
&quot;General Manager&quot;,1,
&quot;HP General Manager&quot;,1,
&quot;Finance Manager&quot;,1,
&quot;Investment Area Manager&quot;,1,
&quot;HP Manager&quot;,1,
&quot;Relationship Manager&quot;,1,
&quot;HP Lead&quot;,1,
&quot;HP Specialist&quot;,1,
&quot;Senior Adviser&quot;,1, 
&quot;HP Planner&quot;,1,0

) = 1,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security - Remove Hold</label>
    <type>Checkbox</type>
</CustomField>