force-app/main/default/objects/Payment__c/fields/Send_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Send_for_Payment__c</fullName>
    <formula>IF( AND( NOT( Pending_Requirements__c ), NOT(Overdue_Requirements__c ),text(Status__c) = &quot;Scheduled&quot;, Date__c &lt; today() + 15,Organisation_Flag__c =&quot;HPSNZ&quot;), True, 
IF( AND( NOT( Pending_Requirements__c ), NOT(Overdue_Requirements__c ),text(Status__c) = &quot;Scheduled&quot;, Date__c &lt; today() + 15,Organisation_Flag__c = &quot;Sport NZ&quot;),
							True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send for Payment</label>
    <type>Checkbox</type>
</CustomField>