force-app/main/default/objects/Payment__c/fields/Supplier_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Date__c</fullName>
    <inlineHelpText>Used only for payments that are made on receipt of an invoice. Enter the date when the invoice was issued.</inlineHelpText>
    <label>Supplier Invoice Date</label>
    <type>Date</type>
</CustomField>