force-app/main/default/objects/Payment__c/fields/Supplier_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Invoice_Number__c</fullName>
    <description>Supplier invoice number</description>
    <inlineHelpText>Used only for payments that are made on receipt of an invoice. Enter the invoice number that displays on that invoice.</inlineHelpText>
    <label>Supplier Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>