force-app/main/default/objects/Payment__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this for Payments to Third Party - this is when the payment is to be made to an Organisation that is NOT the Organisation on the Initiative, such as when payments from one initiative are made to different organisations.</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Vendor)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>