force-app/main/default/objects/Payment__c/fields/Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Id__c</fullName>
    <formula>IF(ISBLANK(Vendor__c ) , Partner__r.Vendor_Id__c , Vendor__r.Vendor_Id__c )</formula>
    <label>Vendor Id</label>
    <type>Text</type>
</CustomField>