force-app/main/default/objects/Payment__c/fields/Who_did_the_work__c.field-meta.xml
<CustomField>
    <fullName>Who_did_the_work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Business Improvement team populates this field retrospectively, and uses this data to analyse the use of key consultants in the sector.</inlineHelpText>
    <label>Who did the work</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments (Who did the work)</relationshipLabel>
    <relationshipName>Payments2</relationshipName>
    <type>Lookup</type>
</CustomField>