force-app/main/default/objects/Payment__c/fields/Work_Brief_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Brief_ID__c</fullName>
    <formula>Initiative__r.Work_Brief__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Brief ID</label>
    <type>Text</type>
</CustomField>