force-app/main/default/objects/Payment__c/recordTypes/Buy_Back_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Buy_Back_Read_Only</fullName>
    <active>true</active>
    <description>This record type will be used to prevent edit of record when Inv schedule status is Approved or Signed.</description>
    <label>Buy Back Read Only</label>
</RecordType>