force-app/main/default/objects/Payment__c/recordTypes/Credit.recordType-meta.xml
<RecordType>
    <fullName>Credit</fullName>
    <active>true</active>
    <description>Typically used where a payment was sent to the FMIS in error (cancelled before being paid) and needs to be balanced in Salesforce</description>
    <label>Credit</label>
</RecordType>