force-app/main/default/objects/Payment__c/recordTypes/Payment.recordType-meta.xml
<RecordType>
    <fullName>Payment</fullName>
    <active>true</active>
    <description>For all payments going from Sport NZ Group to an investment recipient or service provider</description>
    <label>Payment</label>
</RecordType>