force-app/main/default/objects/Payment__c/recordTypes/Refund.recordType-meta.xml
<RecordType>
    <fullName>Refund</fullName>
    <active>true</active>
    <description>Used to reflect money received as a refund against an investment or procurement made from Salesforce</description>
    <label>Refund</label>
</RecordType>