force-app/main/default/objects/Payment__c/recordTypes/Service_Credit.recordType-meta.xml
<RecordType>
    <fullName>Service_Credit</fullName>
    <active>true</active>
    <description>Applies a credit in the FMIS AP, where a portion of an organisation&apos;s investment is allocated to services provided by Sport NZ Group</description>
    <label>Buy Back</label>
</RecordType>