force-app/main/default/objects/Payment__c/validationRules/Buy_back_amount_exceeds_related_payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Buy_back_amount_exceeds_related_payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(RecordType.DeveloperName = &apos;Service_Credit&apos;, RecordType.DeveloperName = &apos;Buy_Back_Read_Only&apos;),
( ABS( Amount__c )  &gt;  ABS(Related_Payment__r.Amount__c))
)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>The buy back amount cannot exceed the amount of the related payment</errorMessage>
</ValidationRule>