force-app/main/default/objects/Payment__c/validationRules/Cannot_Edit_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>not(ispickval(Status__c,&quot;Draft&quot;) ||
    ispickval(Status__c,&quot;Variation&quot;) ) &amp;&amp; (
ischanged(Related_Payment__c) ||
ischanged(Vendor__c) ||  
ischanged(Expense_Code__c) ||
ischanged(Cost_Centre__c) || 
ischanged(Date__c) ||
ischanged(Amount__c))</errorConditionFormula>
    <errorDisplayField>Actual_Payment_Date__c</errorDisplayField>
    <errorMessage>Only Payments with a status of &apos;Draft&apos; and &quot;Variation&quot; can be edited. Please initiate a variation from the related Investment Schedule if required.</errorMessage>
</ValidationRule>