force-app/main/default/objects/Payment__c/validationRules/CannotEditRecordsOfApprovedIS.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotEditRecordsOfApprovedIS</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Initiative__r.Business_Case__r.Status__c , &apos;Approved&apos;),ISPICKVAL(Initiative__r.Business_Case__r.Status__c , &apos;Signed&apos;)), $Profile.Name =&apos;Kahiwi&apos;,OR(ISCHANGED(Initiative__c), ISCHANGED(Related_Payment__c) ,ISCHANGED(Date__c )))</errorConditionFormula>
    <errorMessage>Woops! Current business rules will correctly prevent you from editing these fields. To proceed, you must Initiate a Variation.</errorMessage>
</ValidationRule>