force-app/main/default/objects/Payment__c/validationRules/Credit_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>OR(RecordType.Name = &apos;Credit&apos;, RecordType.Name =&apos;Credit Read Only&apos;) &amp;&amp;  ( Amount__c &gt;= 0 || abs(Amount__c) &gt;  abs(Related_Payment__r.Amount__c))</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Please enter a negative amount for Credits that isn&apos;t greater than the Related Payment amount.</errorMessage>
</ValidationRule>