force-app/main/default/objects/Payment__c/validationRules/Credit_vendor.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_vendor</fullName>
    <active>true</active>
    <description>If payment record type is &apos;Credit&apos; , initiative&apos;s type is &apos;Paid to Third Party&apos; and
payment vendor is not selected then it will throw an error as &apos;Please select vendor&apos;.</description>
    <errorConditionFormula>IF( AND( RecordType.Name =&apos;Credit&apos;,  ISPICKVAL(Initiative__r.Type__c,&apos;Paid to Third Party&apos;),Vendor__c = NULL) , true, false)</errorConditionFormula>
    <errorDisplayField>Vendor__c</errorDisplayField>
    <errorMessage>Please select vendor</errorMessage>
</ValidationRule>