force-app/main/default/objects/Payment__c/validationRules/Finance_Cannot_Create_Payments.validationRule-meta.xml
<ValidationRule>
    <fullName>Finance_Cannot_Create_Payments</fullName>
    <active>true</active>
    <errorConditionFormula>isnew() &amp;&amp;  OR(RecordType.Name = &quot;Payment&quot;, RecordType.Name =&quot;Payment Read Only&quot;) &amp;&amp;($UserRole.Name = &quot;Finance Manager&quot; || $UserRole.Name = &quot;Finance Administrator&quot;)</errorConditionFormula>
    <errorMessage>Finance Manager and Finance Administrator roles are not allowed to create Payments of this record type.</errorMessage>
</ValidationRule>