force-app/main/default/objects/Payment__c/validationRules/Hold_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Hold_Reason_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Status__c)=&quot;On Hold&quot;, ISBLANK (TEXT(Hold_Reason__c)))</errorConditionFormula>
    <errorDisplayField>Hold_Reason__c</errorDisplayField>
    <errorMessage>Hold reason required if the payment status is set to &quot;On Hold&quot;</errorMessage>
</ValidationRule>