force-app/main/default/objects/Payment__c/validationRules/No_Backdating_Payment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Backdating_Payment_Date</fullName>
    <active>true</active>
    <description>Payment Date cannot be before the current date</description>
    <errorConditionFormula>AND((ISNEW()  || ISCHANGED( Date__c )) &amp;&amp; Date__c &lt; TODAY(), NOT(OR(RecordType.DeveloperName = &quot;Refund&quot; , RecordType.DeveloperName = &quot;Refund_Read_Only&quot;)))</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Payment Date cannot be before the current date. Please select a future date for this payment</errorMessage>
</ValidationRule>