force-app/main/default/objects/Payment__c/validationRules/Paid_to_Partner_Vendor.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_to_Partner_Vendor</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval( Initiative__r.Type__c, &quot;Paid to Partner&quot;) &amp;&amp; not(isblank(Vendor__c))</errorConditionFormula>
    <errorDisplayField>Vendor__c</errorDisplayField>
    <errorMessage>Specifying the Vendor is not allowed for Initiatives that are &apos;Paid to Partner&apos;. Please remove this value.</errorMessage>
</ValidationRule>