force-app/main/default/objects/Payment__c/validationRules/Payment_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>(RecordType.Name = &apos;Payment&apos; || RecordType.Name = &apos;Payment Read Only&apos;)   &amp;&amp;  ( Amount__c &lt;= 0 || abs(Amount__c) &gt;  abs(Initiative__r.Planned__c))</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Please enter a positive amount for Payment that isn&apos;t greater than the related Initiative planned amount.</errorMessage>
</ValidationRule>