force-app/main/default/objects/Payment__c/validationRules/Payment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Date__c &lt;  Initiative__r.Start_Date__c</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>The Payment Date cannot be before the start date of the Initiative</errorMessage>
</ValidationRule>